# microtransformer

./: README.md  flake.nix  pyproject.toml
app/: bigram.py  main.py  transformer.py  trigram.py
