[tool.poetry]
name = "transformer"
version = "0.1.0"
description = "A small transformer"
authors = ["agentelement <agentelement@protonmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
tqdm = "^4.66.4"
jax = "^0.4.30"
torch = "^2.3.1"
hatch-vcs = "^0.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
